--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
     background: #009688;
     position: absolute;
     left: 0;
-    bottom: -10px;
+    bottom: -6px;
     transition: 0.5s;
 }
 
@@ -70,7 +70,6 @@
 
 .heding h1 {
     font-size: 70px;
-    margin-top: 1px;
 }
 
 .heding p {
@@ -120,6 +119,9 @@ button:hover span {
 
     .back ul {
         display: none;
+        position: absolute;
+        top: 72px;
+        left: 72%;
     }
 
 
@@ -138,15 +140,32 @@ button:hover span {
     }
 
     .heding p {
-        font-size: 22px;
-        /* line-height: 0px; */
+        font-size: 11px;
+        line-height: 17px;
     }
 
     .heding h1 {
-        font-size: 37px;
+        font-size: 35px;
+    }
+
+    .heding {
+        top: 55%;
     }
 
     button {
         width: 125px;
     }
+
+    .back ul li {
+
+        display: table;
+        margin: 0px;
+        padding-bottom: 15px;
+    }
+
+    .contect {
+        margin: auto;
+        font-size: 12px;
+    }
+
 }
